--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,12 +1,16 @@
+div {
+  text-align: center;
+}
+
 .img {
   display: inline-block;
   box-sizing: border-box;
-  margin: 44px;
-  border: 5px solid rgb(81, 77, 77);
+  padding: 7px;
+  border: 2px solid black;
+  margin: 25px;
   border-radius: 5%;
   width: 300px;
   height: 300px;
   object-fit: cover;
   object-position: center;
-  /* text-align: center; */
 }
